--- a/android/app/src/main/res/xml/widget_info.xml
+++ b/android/app/src/main/res/xml/widget_info.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="360dp"
+    android:minHeight="72dp"
+    android:previewImage="@drawable/widget_timetable_preview"
     android:updatePeriodMillis="86400000"
     android:initialLayout="@layout/widget_layout"
     android:resizeMode="horizontal|vertical"
